--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<title>Hoang Bao Nghi Bien Portfolio</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="MyPortfolio.css">
+		<link rel="stylesheet" href="index.css">
 		
 	</head>
 
@@ -167,6 +167,6 @@
 			</section>
 			
 		</div>
-		<script src="MyPortfolio.js"></script>
+		<script src="index.js"></script>
 	</body>
 </html>
