--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 	<head>
 		<title>Hoang Bao Nghi Bien Portfolio</title>
 		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+<!-- 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" /> -->
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="stylesheet" href="index.css">
 		
 	</head>
@@ -17,30 +18,26 @@
 			<a class="nav-item left" href="#about-section">About</a>
 		</div>
 		<div class="page-content">
-			<!--Home section
+			<!-- Home section -->
 			<section id="home-section">
-				<div class="container row">
-					<img src="images/t.jpeg" id="portfolio-photo">
-				</div>
-			</section>-->
-			<!-- About section-->
-			<section id="about-section">
 				<div class="container row">
 					<div class="container row" id="landing-container">
 						<img src="images/myphoto.png" id="my-photo">
 						<div class="container column" id="landing-text">
 							<h1>HOANG BAO NGHI BIEN</h1>
-							<p>
+							<!-- <p>
 								I'm studying Computer Science at The University of Illinois at Chicago.
 								<br>
 								I'm also interested in design.
 								<br>
 								Thank you for visiting.
-							</p>				
+							</p> -->				
 						</div>
 					</div>
 				</div>
 			</section>
+			<!-- About section-->
+			<!-- <section id="about-section"></section> -->
 			<!--Education section-->
 			<section id="education-section">
 				<div class="container column" id="text">
