--- a/index.html
+++ b/index.html
@@ -80,13 +80,14 @@
 				<!--Filter Buttons-->
 				<div class="container row" id="button-section">
 					<button class="filter-button active" onclick="filterSelection('all')">All</button>
-					<button class="filter-button" onclick="filterSelection('java')">C</button>
 					<button class="filter-button" onclick="filterSelection('C++')">C++</button>
+					<button class="filter-button" onclick="filterSelection('java')">Java</button>
 					<button class="filter-button" onclick="filterSelection('react')">React</button>
 					<button class="filter-button" onclick="filterSelection('data')">MySQL</button>
 				</div>
 				<!--Projects-->
 				<div class="container row" id="project-container">
+					<!-- Dormitory Manager -->
 					<div class="each-project react show">
 					  <img class="proj-img" src="images/Dorm_Manager.png">
 					  <div class="proj-description container column">
@@ -103,6 +104,7 @@
 					  </div>
 					</div>
 
+					<!-- DNA Profiling -->
 					<div class="each-project C++ show">
 					  <img class="proj-img" src="images/DNAProfiling.png">
 					  <div class="proj-description container column">
@@ -119,6 +121,7 @@
 					  </div>
 					</div>
 
+					<!-- Open Stresst Maps -->
 					<div class="each-project C++ show">
 					  <img class="proj-img" src="images/OpenStreetMaps.png">
 					  <div class="proj-description container column">
@@ -133,6 +136,7 @@
 					  </div>
 					</div>
 
+					<!-- Animated Barchart -->
 					<div class="each-project C++ show">
 						<img class="proj-img" src="images/AnimatedBarchart.png">
 						<div class="proj-description container column">
@@ -144,8 +148,43 @@
 								<br>
 								<br>
 								<i>C++</i>
+							</div>
+						</div>		
+					</div>
+
+					<!-- Explore The Labyrinth -->
+					<div class="each-project C++ show">
+						<img class="proj-img" src="images/ExploreTheLabyrinth.png">
+						<div class="proj-description container column">
+							<div class="img-description">
+								<h2>Explore The Labyrinth</h2>
+								<p>Using gdb to find the path which can collect the Spellbook, Potion and Wand to escape a labyrinth.</p>
+								<br>
+								<a href="https://github.com/HoangBaoNghiBien/CS251_Project/tree/main/Project4_ExploreTheLabyrinth"
+									target="_blank">Github</a>
+								<br>
+								<br>
+								<i>C++</i>
+							</div>
 						</div>
-					  </div>
+					</div>
+
+					<!-- Tic-Tac-Toe -->
+					<div class="each-project java show">
+						<img class="proj-img" src="images/TicTacToe.png">
+						<div class="proj-description container column">
+							<div class="img-description">
+								<h2>Tic-Tac-Toe</h2>
+								<p>Using JavaFX to write a very simple version, fully functional of Tic Tac Toe game.</p>
+								<br>
+								<a href="https://github.com/HoangBaoNghiBien/JavaProject/tree/main/TicTacToe"
+									target="_blank">Github</a>
+								<br>
+								<br>
+								<i>Java</i>
+							</div>
+						</div>
+					</div>
 				</div>
 			</section>
 
