--- a/index.html
+++ b/index.html
@@ -60,14 +60,19 @@
 							<li>Mathematical Foundations of Computing (CS 151)</li>
 							<li>Programing Practicum (CS 211)</li>
 							<li>Data Structures (CS 251)</li>
-							<li>Web App Development (CS 294) *</li>
-							<li>Machine Organization (CS 261) *</li>
+							<li>Web App Development (CS 294)</li>
+							<li>Machine Organization (CS 261)</li>
 							<li>Languages and Automata (CS 301)</li>
-							<li>Software Design (CS 342) *</li>
+							<li>Programming Language Concepts (CS 341) *</li>
+							<li>Software Design (CS 342)</li>
+							<li>Systems Programming (CS 361) *</li>
+							<li>Computer Design (CS 362) *</li>
 							<li>Communication and Ethics (CS 377)</li>
-							<li>Computer Algorithms I (CS 401) *</li>
+							<li>Computer Algorithms I (CS 401)</li>
 							<li>Database Systems (CS 408)</li>
-							<li>Computer Vision I (CS 415) *</li>
+							<li>Artificial Intelligence I (CS 411) *</li>
+							<li>Computer Vision I (CS 415)</li>
+							<li>Introduction to Data Science (CS 418) *</li>
 						</ul>
 						<p id="progress">*in progress</p>
 					</div>
@@ -77,18 +82,23 @@
 			<!--Project section-->
 			<section class="container column" id="project-section">
 				<h1 class="subtitle">PROJECT</h1>
+				
+				
 				<!--Filter Buttons-->
 				<div class="container row" id="button-section">
 					<button class="filter-button active" onclick="filterSelection('all')">All</button>
 					<button class="filter-button" onclick="filterSelection('C++')">C++</button>
 					<button class="filter-button" onclick="filterSelection('java')">Java</button>
 					<button class="filter-button" onclick="filterSelection('react')">React</button>
-					<button class="filter-button" onclick="filterSelection('data')">MySQL</button>
+					<button class="filter-button" onclick="filterSelection('sql')">SQL</button>
+					<button class="filter-button" onclick="filterSelection('js')">JavaScript</button>
 				</div>
+				</br>
+				<h5>(red star means project has interface)</h5>
 				<!--Projects-->
 				<div class="container row" id="project-container">
 					<!-- Dormitory Manager -->
-					<div class="each-project react show">
+					<div class="each-project react sql show">
 					  <img class="proj-img" src="images/Dorm_Manager.png">
 					  <div class="proj-description container column">
 					  	<div class="img-description">
@@ -99,7 +109,7 @@
 							<a href="https://github.com/lvu5/project480" target="_blank">Github</a>
 							<br>
 							<br>
-							<i>React|MySQL</i>
+							<i>React | MySQL</i>
 						</p></div>
 					  </div>
 					</div>
@@ -182,6 +192,71 @@
 								<br>
 								<br>
 								<i>Java</i>
+							</div>
+						</div>
+					</div>
+
+					<!-- Simple Chatbox -->
+					<div class="each-project java show">
+						<img class="proj-img" src="images/Chatbox.png">
+						<div class="proj-description container column">
+							<div class="img-description">
+								<h2>Simple Chatbox</h2>
+								<p>A simple chat app for messaging with friends and groups of friends.</p>
+								<br>
+								<a href="https://github.com/HoangBaoNghiBien/JavaProject/tree/main/ChatBox-Java" target="_blank">Github</a>
+								<br>
+								<br>
+								<i>Java | JavaFX | FXML</i>
+							</div>
+						</div>
+					</div>
+
+					<!-- Connect Four -->
+					<div class="each-project java show">
+						<img class="proj-img" src="images/ConnectFour.png">
+						<div class="proj-description container column">
+							<div class="img-description">
+								<h2>Connect Four Game</h2>
+								<p>Connect Four is the gameplay quite similar to tic-tac-toe. Can be played
+								by 2 different players and updated via the server. The game is written by me and 2 partner.</p>
+								<br>
+								<a href="https://github.com/lvu5/cfourgame" target="_blank">Github</a>
+								<br>
+								<br>
+								<i>Java | JavaFX | FXML</i>
+							</div>
+						</div>
+					</div>
+
+					<!-- Fruit Catch Game -->
+					<div class="each-project js show">
+						<img class="proj-img" src="images/FruitCatch.png">
+						<div class="proj-description container column">
+							<div class="img-description">
+								<h2>Fruit Catch Game</h2>
+								<p>A web game where fruit is dropped randomly. Use manifest.json and serviceworker.js. Can be downloaded to your device.</p>
+								<br>
+								<a href="https://github.com/HoangBaoNghiBien/CS294_WebApp/tree/main/FruitCatchGame" target="_blank">Github</a>
+								<br>
+								<br>
+								<i>JavaScript</i>
+							</div>
+						</div>
+					</div>
+
+					<!-- Simple Notes App -->
+					<div class="each-project js show">
+						<img class="proj-img" src="images/NotesApp.png">
+						<div class="proj-description container column">
+							<div class="img-description">
+								<h2>Simple Notes App</h2>
+								<p>Simple note taking web app with utilities like note statistics, news view, quotes provided by available APIs. Can be downloaded to your device.</p>
+								<br>
+								<a href="https://github.com/HoangBaoNghiBien/CS294_WebApp/tree/main/NotesApp" target="_blank">Github</a>
+								<br>
+								<br>
+								<i>JavaScript</i>
 							</div>
 						</div>
 					</div>
