--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
 					<button class="filter-button" onclick="filterSelection('react')">React</button>
 					<button class="filter-button" onclick="filterSelection('sql')">SQL</button>
 					<button class="filter-button" onclick="filterSelection('js')">JavaScript</button>
+					<button class="filter-button" onclick="filterSelection('arduino')">Arduino</button>
 				</div>
 				</br>
 				<h5>(red star means project has interface)</h5>
@@ -260,6 +261,27 @@
 							</div>
 						</div>
 					</div>
+
+					<!-- Landing Character -->
+					<div class="each-project arduino show">
+						<img class="proj-img" src="images/Landing Character.png">
+						<div class="proj-description container column">
+							<div class="img-description">
+								<h2>Parking Game</h2>
+								<p>Read value passed by potentiometer to adjust the speed of character. 
+									Land the character into 4 blocks in the bottom, written in C++, using Arduino Uno. </p>
+								<br>
+								<a href="https://github.com/HoangBaoNghiBien/Arduino/blob/main/landCharacterGame.ino" target="_blank">Github</a>
+								<a href="https://www.tinkercad.com/things/heCzN9NyKWo-landing-character/editel?sharecode=Ec8FOcXcWlqaXlFkxjffYXu04By9KxXMUPfMb5HY9x0" target="_blank">TinkerCAD</a>
+								<br>
+								<br>
+								<i>Arduino | C++</i>
+							</div>
+						</div>
+					</div>
+
+
+
 				</div>
 			</section>
 
