--- a/public/index.html
+++ b/public/index.html
@@ -38,7 +38,10 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Varela+Round&display=swap" rel="stylesheet">
 
-    <title>React App</title>
+    <!-- Animation -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+
+    <title>BEI Lab</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
