--- a/public/index.html
+++ b/public/index.html
@@ -43,7 +43,7 @@
 
     <title>BEI Lab</title>
   </head>
-  <body>
+  <body style="background-color: var(--navy);">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
