--- a/public/index.html
+++ b/public/index.html
@@ -47,7 +47,7 @@
 
 
   </head>
-  <body style="background-color: var(--navy);">
+  <body style="background-color: var(--background-color);">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
